multiselect tab is added for filters

--- a/src/app/tasks/components/audit/audit.component.html
+++ b/src/app/tasks/components/audit/audit.component.html
@@ -2,14 +2,14 @@
     <p-panel header="Audit">
         <p-header>
             <button pButton type="button" label="Add Note" class="float-r"></button>
-            <div class="float-r text-center align-checkbox"> 
+            <!-- <div class="float-r text-center align-checkbox"> 
             <p-checkbox label="Nodes & Alerts" checkboxIcon="space-labels"></p-checkbox>
             <p-checkbox label="Documents" styleClass="space-labels"></p-checkbox>
             <p-checkbox label="Emails" styleClass="space-labels"></p-checkbox>
             <p-checkbox label="Workflow" styleClass="space-labels"></p-checkbox>
             <p-checkbox label="Edits" styleClass="space-labels"></p-checkbox>
             <p-checkbox label="View All" styleClass="space-labels"></p-checkbox>
-            </div>
+            </div> -->
         </p-header>
         <div style="height: 364px;">
             <p-table [columns]="columns" [value]="auditList">
@@ -18,6 +18,16 @@
                         <th *ngFor="let col of columns">
                             {{col.header}}
                         </th>
+                    </tr>
+                    <tr>
+                        <th></th><th></th>
+                        <th>
+                            <p-multiSelect [options]="filterOptions" placeholder="All" [style]="{'width':'100%'}" styleClass="p-column-filter" optionLabel="name">
+                                <ng-template let-option pTemplate="item">
+                                        <span class="filter-labels">{{option.label}}</span>
+                                </ng-template>
+                            </p-multiSelect>
+                        </th><th></th>
                     </tr>
                 </ng-template>
                 <ng-template pTemplate="body" let-rowData let-columns="columns">
