--- a/src/app/tasks/components/audit/audit.component.scss
+++ b/src/app/tasks/components/audit/audit.component.scss
@@ -7,3 +7,11 @@
     margin-right:20px;
     margin-left:20px;
 }
+
+.p-column-filter{
+     width:100% !important;  
+    }
+
+.filter-labels{
+    margin-right: 50px;
+}
