Task skeleton for Account Maintenance

--- a/src/app/account/components/account-summary/account-summary.component.html
+++ b/src/app/account/components/account-summary/account-summary.component.html
@@ -12,7 +12,7 @@
                 <p-header>
                     Actions
                 </p-header>
-                <a routerLink="./">
+                <a class="pointer" (click)="createNewTask('Account Maintenance', 'acct-maintenance')">
                     Account Maintenance
                 </a>
                 <a routerLink="./">Acct Review Maintenance</a>
