--- a/src/assets/scss/dropdowns.scss
+++ b/src/assets/scss/dropdowns.scss
@@ -3,3 +3,6 @@ p-dropdown.my-tasklistdropdown{
         z-index: 9999999999;
     }
 }
+textarea.communication-text{
+    width: 468px !important;
+}
