--- a/src/app/tasks/components/communication/communication.component.html
+++ b/src/app/tasks/components/communication/communication.component.html
@@ -20,8 +20,8 @@
                             {{rowData[col.field]}}
                         </td>
                         <td>
-                            <span class="fa fa-search pointer" style="margin-left: 25px;"></span>
-                            <span class="fa fa-trash pointer" style="margin-left: 25px;"></span>
+                            <span class="fa fa-search pointer" (click)="viewCommunication(rowData)" style="margin-left: 25px;"></span>
+                            <span class="fa fa-trash pointer" (click)="removeCommunication(rowData)" style="margin-left: 25px;"></span>
                         </td>
                     </tr>
                 </ng-template>
