Add note button changes added with popup box

--- a/src/app/tasks/components/audit/audit.component.scss
+++ b/src/app/tasks/components/audit/audit.component.scss
@@ -8,10 +8,20 @@
     margin-left:20px;
 }
 
-.p-column-filter{
-     width:100% !important;  
+.notes{
+     width:100% !important; 
+     height:100px; 
     }
 
 .filter-labels{
     margin-right: 50px;
+}
+.footer-panel{
+    padding-top: 15px;
+}
+.btn-align{
+    margin-right: 10px;
+}
+.input-filters{    
+     width:100% !important; 
 }
