Additional account: Disable delete in review state

--- a/src/app/tasks/components/contact-center-task/contact-center-task.component.scss
+++ b/src/app/tasks/components/contact-center-task/contact-center-task.component.scss
@@ -59,3 +59,6 @@ input[type=text].ui-inputtext.invalid-input {
 .error-mar {
     margin-bottom: 10px;
 }
+.pointer-none-review {
+    pointer-events: none;
+}
