--- a/src/app/tasks/components/contact-center-task/contact-center-task.component.html
+++ b/src/app/tasks/components/contact-center-task/contact-center-task.component.html
@@ -144,7 +144,7 @@
                             {{rowData[col.field]}}
                         </td>
                         <td class="ui-resizable-column">
-                            <span class="fa fa-trash pointer" style="padding-left: 5px;"
+                            <span class="fa fa-trash pointer" [ngClass]="{'pointer-none-review': isTaskInView}" style="padding-left: 5px;"
                                 (click)="deleteAccount(rowData)"></span>
                         </td>
                     </tr>
