--- a/src/app/tasks/components/contact-center-task/contact-center-task.component.html
+++ b/src/app/tasks/components/contact-center-task/contact-center-task.component.html
@@ -123,7 +123,7 @@
                 <span *ngIf="!isTaskInView">Add Additional Accounts</span>
                 <span *ngIf="isTaskInView">Additional Accounts</span>
                 <p-button *ngIf="!(isTaskInReview || isTaskInView || isAdditionalAccountsSectionVisible)" type="button"
-                    label="Add" class="save-pad" (click)="display=true;accountSearchRes=[];accountNo=null">
+                    label="Add" class="save-pad" (click)="validationErr='';display=true;contactCenterSearch=true;">
                 </p-button>
             </div>
         </div>
@@ -144,8 +144,8 @@
                             {{rowData[col.field]}}
                         </td>
                         <td class="ui-resizable-column">
-                            <span class="fa fa-trash pointer" [ngClass]="{'pointer-none-review': isTaskInView}" style="padding-left: 5px;"
-                                (click)="deleteAccount(rowData)"></span>
+                            <span class="fa fa-trash pointer" [ngClass]="{'pointer-none-review': isTaskInView}"
+                                style="padding-left: 5px;" (click)="deleteAccount(rowData)"></span>
                         </td>
                     </tr>
                 </ng-template>
@@ -239,51 +239,14 @@
                 {{message.text}}
             </div>
         </div>
+        <div *ngIf="validationErr && validationErr != ''" class="alert alert-danger">
+            {{validationErr}}
+        </div>
     </div>
 </form>
 
-<p-dialog [(visible)]="display" [modal]="true" [style]="{width: '50vw', height: '26vw'}" [baseZIndex]="10000"
+<p-dialog [(visible)]="display" [modal]="true" [style]="{width: '55vw', height: '30vw'}" [baseZIndex]="10000"
     [maximizable]="false" [draggable]="true" [resizable]="false">
-    <div class="panel">
-        <p-panel header="Account Search">
-            <div class="flex-container">
-                <div class="container-pad-2">
-                    <label class="label-wid-1">Account Number</label>
-                    <input type="text" pInputText class="input-align" [(ngModel)]="accountNo" />
-                </div>
-                <button pButton type="button" label="Search" (click)="searchAccount()" class="btn-align"></button>
-            </div>
-            <div class="flex-container">
-                <p-table [columns]="accountColumns" [value]="accountSearchRes" selectionMode="single"
-                    [(selection)]="selectedAccount">
-                    <ng-template pTemplate="header" let-columns>
-                        <tr>
-                            <th *ngFor="let col of columns">
-                                {{col.header}}
-                            </th>
-                        </tr>
-                    </ng-template>
-                    <ng-template pTemplate="body" let-account let-rowData let-columns="columns">
-                        <tr [pSelectableRow]="account">
-                            <td *ngFor="let col of columns">
-                                {{rowData[col.field]}}
-                            </td>
-                        </tr>
-                    </ng-template>
-                    <ng-template pTemplate="emptymessage">
-                        <tr class="text-center">
-                            <td *ngIf="accountSearchErr == null" colspan="2">No records to display.</td>
-                            <td *ngIf="accountSearchErr != null" colspan="2">{{accountSearchErr}}</td>
-                        </tr>
-                    </ng-template>
-                </p-table>
-            </div>
-            <div class="footer-panel">
-                <div class="error-col error-mar">{{validationErr}}</div>
-                <span><button pButton type="button" label="Cancel" class="btn-mar"
-                        (click)="display=false"></button></span>
-                <span><button pButton type="submit" label="Done" (click)="addSelectedAccount()"></button></span>
-            </div>
-        </p-panel>
-    </div>
+    <srca-account-search *ngIf="contactCenterSearch" (addAccount)="addSelectedAccount($event)"
+        [contactCenterSearch]="contactCenterSearch"></srca-account-search>
 </p-dialog>
