audit scroll UI changes

--- a/src/app/tasks/components/audit/audit.component.html
+++ b/src/app/tasks/components/audit/audit.component.html
@@ -25,15 +25,15 @@
             </div>
         </p-dialog>
         <div style="height: 364px;">
-            <p-table #dt [columns]="columns" [value]="auditList" [scrollable]="true" scrollHeight="270px"
-            [resizableColumns]="true" [reorderableColumns]="true" class="my-task-list-table">
+            <p-table #dt [columns]="columns" [value]="auditList" [scrollable]="true" 
+            scrollHeight="270px" class="audit-list-table">
                 <ng-template pTemplate="header" let-columns>
                     <tr>
                        
                         <!-- <th *ngFor="let col of columns" style="width: 307px;">
                             {{col.header}}
                         </th> -->
-                        <th *ngFor="let col of columns" [pSortableColumn]="col.field" pResizableColumn pReorderableColumn>
+                        <th *ngFor="let col of columns" [pSortableColumn]="col.field">
                             {{col.header}}
                             <p-sortIcon [field]="col.field"></p-sortIcon>
                           </th>
