--- a/src/app/tasks/components/audit/audit.component.scss
+++ b/src/app/tasks/components/audit/audit.component.scss
@@ -25,33 +25,20 @@
 .input-filters{    
      width:100% !important; 
 }
-
-.my-task-list-table::ng-deep .ui-table{
-   z-index: 0;
-    
+.audit-list-table::ng-deep .ui-table{
+    .ui-table-thead{
+        tr{
+            th{
+                white-space: nowrap;
+                width: 25%;
+            }
+    }
+}
     .ui-table-scrollable-wrapper{
         .ui-table-scrollable-view{
             .ui-table-scrollable-header{
-                overflow-y: scroll;
-                .ui-table-scrollable-header-box{
-                    padding-right: 0px !important;
-                    // margin-right: 31px !important;
-                    // background-color: #ebebe8;;
-                }
+                overflow: visible;
             }
-            .ui-table-scrollable-body {
-                overflow-y: scroll !important;
-               // height: 450px;
-            }
-        }
-    }
-
-    .ui-multiselect-panel {
-
-        .ui-multiselect-items-wrapper {
-            z-index:9999;
         }
     }
 }  
-
-
